--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel='icon' href='img/favicon.png' type='image/x-icon' />
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- <link rel="stylesheet" type="text/css" href="style.scss"> -->
-  <link rel="stylesheet" type="text/css"
+  <link rel="styslesheet" type="text/css"
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Latest compiled and minified CSS -->
@@ -38,7 +38,7 @@
 
     <section class="banner1" id="home">
       <!-- <img src="img/asmerchougle.jpg"> -->
-      <header class="" id="header">
+      <header class="" id="header" style="background-color: black;">
 
 
         <div class="navbar-area">
@@ -278,6 +278,54 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-sm-12 col-md-6">
+          <div class="card mb-3" style="height: 25rem; ">
+            <!-- img card -->
+            <img src="img/web1.png" class="d-block w-100" alt="..." data-toggle="modal"
+              data-target="#exampleModalCenter3">
+
+            <!-- img card end -->
+            <div class="card-body">
+              <p class="card-text">
+                This Website is for creative designing company and to show case their work. This is made using HTML5
+                CSS3 and jQuery.
+                This website design is base on a Figma Design. And this only for desktop users. <br>
+                <a href="https://website-8ed4b.web.app/" class="btn btn-warning text-light">Demo</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-12 col-md-6">
+          <div class="card mb-3" style="height: 25rem; ">
+            <!-- img card -->
+            <img src="img/exam1.png" class="d-block w-100" alt="..." data-toggle="modal"
+              data-target="#exampleModalCenter">
+
+            <!-- img card end -->
+            <div class="card-body">
+              <p class="card-text">Online examination system for the students. And it has a unique feature that if the
+                person login it he will not allow to enter the exam until he is allowed by the admin. It is made by
+                using PHP, MySQl, JS, HTML5 & CSS3 (Responsive)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-12 col-md-6">
+          <div class="card mb-3" style="height: 25rem; ">
+            <!-- img card -->
+            <img src="img/exam1.png" class="d-block w-100" alt="..." data-toggle="modal"
+              data-target="#exampleModalCenter">
+
+            <!-- img card end -->
+            <div class="card-body">
+              <p class="card-text">Online examination system for the students. And it has a unique feature that if the
+                person login it he will not allow to enter the exam until he is allowed by the admin. It is made by
+                using PHP, MySQl, JS, HTML5 & CSS3 (Responsive)</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -474,9 +522,9 @@
 
   </section>
   <!-- model -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
@@ -541,18 +589,15 @@
 
 
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+
       </div>
     </div>
   </div>
 
   <!-- 2 -->
-  <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal fade bd-example-modal-lg" id="exampleModalCenter1" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
@@ -626,6 +671,100 @@
           <img src="img/Onlinememo.png" class="d-block w-100" alt="...">
 
         </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+  <div class="modal fade bd-example-modal-lg" id="exampleModalCenter3" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- ...1 -->
+          <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+
+
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/web1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/web2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/web3.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/web4.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/web5.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/web6.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/web7.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators3" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+            Click to get more pictures
+          </div>
+
+
+
+
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- ...1 -->
+          <img src="img/Onlinememo.png" class="d-block w-100" alt="...">
+
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
@@ -633,9 +772,9 @@
       </div>
     </div>
   </div>
-  <div class="loader-wapper"><span class="loader text-light">
+  <!-- <div class="loader-wapper"><span class="loader text-light">
       <h1>Asmer.</h1>
-    </span></div>
+    </span></div> -->
   <script src="home.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
